--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,7 @@
     padding: 5% 0 0 5%;
     color: white;
     font-size: larger;
+    background-color: transparent;
 }
 
 .innerContents {
@@ -94,8 +95,112 @@
     align-items: center;
     justify-content: space-around;
     margin: 20px;
+    border-bottom: 1px solid gray;
 }
 
 .welcome p {
     width: 70%;
+}
+
+.welcome a,
+.welcome input[type='button'] {
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    padding: 1%;
+    border: none;
+    border-radius: 6px;
+
+}
+
+.content {
+    min-height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+}
+
+.content ul li,
+.content ol li {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 8px 0 8px 0;
+}
+
+.highlights ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.whychoose {
+    border-bottom: 1px solid gray;
+    padding: 4% 0 4% 0;
+}
+
+.testimonials {
+    border-bottom: 1px solid gray;
+}
+
+.testimonials .reveiws {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    padding: 1% 0 1% 0;
+}
+
+.reveiws div {
+    margin: 1% 0 1% 0;
+    padding: 1% 4% 4% 4%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    border: 1px solid gray;
+    border-radius: 3px;
+    box-shadow: 12px gray;
+}
+
+.testimonials h3,
+.reveiws h4 {
+    border-bottom: 1px solid gray;
+    padding-bottom: 3px;
+    margin-bottom: 5px;
+}
+
+.featuredTask {
+    background-image: url('/public/images/wallpaperflare.com_wallpaper\ \(1\).jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    color: white;
+    min-height: 50vh;
+    margin-bottom: 2%;
+
+}
+
+.featuredTask h3,
+.featuredTask em,
+.featuredTask ol {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1%;
+    margin: 1% 0 1% 0;
+}
+
+h3 {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.highlights input[value='Tasks'],
+.highlights input[value='Promodoro'] {
+    background-color: black;
+    color: white;
+    padding: 2%;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
