--- a/styles/index.css
+++ b/styles/index.css
@@ -144,6 +144,7 @@
 
 .testimonials {
     border-bottom: 1px solid gray;
+    background-image: url('/public/images/1352186.png');
 }
 
 .testimonials .reveiws {
