moved all images to public directly

--- a/styles/index.css
+++ b/styles/index.css
@@ -72,20 +72,20 @@
 
 
 #slide1 {
-    background-image: url('/images/task-management.png');
+    background-image: url('/public/task-management.png');
 }
 
 #slide2 {
-    background-image: url('/images/1338126.png');
+    background-image: url('/public/1338126.png');
 }
 
 
 #slide3 {
-    background-image: url('/images/1352186.png');
+    background-image: url('/public/1352186.png');
 }
 
 #slide4 {
-    background-image: url('/images/1338126.png');
+    background-image: url('/public/1338126.png');
 }
 
 .welcome {
@@ -144,7 +144,7 @@
 
 .testimonials {
     border-bottom: 1px solid gray;
-    background-image: url('/images/1352186.png');
+    background-image: url('/public/1352186.png');
 }
 
 .testimonials .reveiws {
@@ -172,7 +172,7 @@
 }
 
 .featuredTask {
-    background-image: url('/images/wallpaperflare.com_wallpaper\ \(1\).jpg');
+    background-image: url('/public/wallpaperflare.com_wallpaper\ \(1\).jpg');
     background-attachment: fixed;
     background-size: cover;
     color: white;
