--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,34 +1,84 @@
 nav {
+    display: none;
+}
+
+.phoneNav {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgb(230, 230, 230);
-    /* margin-bottom: 20px; */
-}
-
-.left {
-    width: 20%;
-    display: flex;
     justify-content: space-between;
-    padding: 15px 15px 15px 25px;
+    width: 100%;
+    height: 7vh;
+
 }
 
-.left a {
+img[alt*='hamburger'] {
+    width: 20px;
+}
+
+.left input,
+.phoneLeft input {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.left a,
+.phoneLeft a {
     text-decoration: none;
     color: black;
 
 }
 
-.right {
-    padding: 15px 25px 15px 15px;
+.phoneLeft {
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    margin-left: 10px;
 }
 
-.left input {
-    border: none;
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+}
+
+.dropdown-content a {
+    padding: 25px 0;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    width: 100%;
+    /* margin: 10px 0 10px 0; */
+    font-size: small;
+    border-top: 1px solid rgb(231, 231, 231);
+
+}
+.dropdown-content a:hover{
+    background-color: rgb(241, 241, 241);
+}
+.hiddenDrop {
+    display: none;
+}
+
+button[id*='dropdown'] {
+    width: 40px;
     background-color: transparent;
+    margin-right: 10px;
+    border: none;
     cursor: pointer;
 }
+
 
 input[name='signup'] {
     padding: 5px;
@@ -41,4 +91,33 @@ input[name='signup'] {
 input[value*='Login'] {
     background-color: black;
     color: white;
+}
+
+@media(min-width:768px) {
+    .phoneNav {
+        display: none;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid rgb(230, 230, 230);
+        /* margin-bottom: 20px; */
+    }
+
+    .left {
+        width: 40%;
+        display: flex;
+        justify-content: space-between;
+        padding: 15px 15px 15px 25px;
+    }
+
+    .right {
+        display: inline;
+        padding: 15px 20px 15px 15px;
+    }
+
+
 }
