--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,6 +8,7 @@ nav {
     justify-content: space-between;
     width: 100%;
     height: 7vh;
+    border-bottom: 1px solid rgb(230, 230, 230);
 
 }
 
