--- a/styles/nav.css
+++ b/styles/nav.css
@@ -9,6 +9,7 @@ nav {
     width: 100%;
     height: 7vh;
     border-bottom: 1px solid rgb(230, 230, 230);
+    font-size: small;
 
 }
 
@@ -104,6 +105,7 @@ input[value*='Login'] {
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid rgb(230, 230, 230);
+        font-size: medium;
         /* margin-bottom: 20px; */
     }
 
